--- a/app/assets/stylesheets/home_styles.css.erb
+++ b/app/assets/stylesheets/home_styles.css.erb
@@ -9,6 +9,21 @@
   background-size: cover;
 }
 
+.content__img__update{
+  
+}
+
+.content__img__update span{
+  padding-right: 10px;
+}
+
+#user_profile_img{
+    width: 200px;
+    height: 170px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+
 .content {
   display: grid;
   justify-content: center;
