feat: adicionar componente de calendario na pagina de dashboard

--- a/app/assets/stylesheets/cartao_agendamento.css.erb
+++ b/app/assets/stylesheets/cartao_agendamento.css.erb
@@ -14,6 +14,10 @@
     cursor: pointer;
 }
 
+.cartao_agendamento__container:hover {
+    opacity: 0.8;
+}
+
 .primeiro {
     height: 112px;
     border-left: 2px solid #FF9000;
