--- a/app/views/usuarios/password.html.erb
+++ b/app/views/usuarios/password.html.erb
@@ -5,10 +5,10 @@
         <h3 class="content__title">Por favor, insira seu endereço de email. Enviaremos um email para que possa recuperar sua senha.</h3>
         <%= form_with do |f| %>
             <div class="content__field">
-                <%= f.email_field :email, placeholder: "E-mail", id:"email" %>
+                <%= f.email_field :email, placeholder: "E-mail", id:"email", :required => 'required' %>
             </div>
             <div class="content__btn">
-                <%= f.submit "Enviar email" %>
+                <%= f.submit "Enviar email"%>
             </div>
             <% flash.each do |type, msg| %>
                 <div class="content__link">
@@ -16,5 +16,11 @@
                 </div>
             <% end %>
         <% end %>
+         <div class="content__link">
+            &larr; 
+            <%= link_to 'Voltar para o login', login_path, class:"content__link" %>
+        </div>
     </div>
+
 </div>
+
