completed-feature-upload-foto-perfil

--- a/app/assets/stylesheets/home_styles.css.erb
+++ b/app/assets/stylesheets/home_styles.css.erb
@@ -87,6 +87,21 @@
   margin-top: 50px;
 }
 
+.content__img__update a{
+  text-decoration: none;
+  color: #fff;
+  margin-top: 50px;
+  cursor: pointer;
+}
+
+.link-true{
+  text-decoration: none;
+  color: #c7c7 !important;
+  margin-top: 50px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
 @media screen and (max-width: 1024px) {
   .container {
     grid-template-columns: auto;
