fix: corrigir testes apos mudanca de timezone e locales

--- a/app/assets/stylesheets/calendario.css.erb
+++ b/app/assets/stylesheets/calendario.css.erb
@@ -53,8 +53,8 @@
     color: #666360;
 }
 
-.calendario__dia_hoje {
-    color: #FF9000 !important;
+.calendario__dia_hoje:after {
+    border: 1px solid #FF9000;
 }
 
 .calendario__dia_selecionado:after {
