--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -20,7 +20,7 @@
          
          <% if !@proximo_agendamento.present? %>
             <p class="dashboard__sem_agendamento">
-               Você não tem nenhum agendamento futuro neste dia
+               Você não tem nenhum agendamento neste dia
             </p>
          <% else %>
             <div>
