--- a/app/assets/stylesheets/dashboard.css.erb
+++ b/app/assets/stylesheets/dashboard.css.erb
@@ -39,3 +39,9 @@
     margin-top: 64px;
     margin-bottom: 16px;
 }
+
+.dashboard__sem_agendamento {
+    font-size: 16px;
+    line-height: 21px;
+    color: #F4EDE8;
+}
